WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
111638
[chromium] Don't get callbacks or create GrContext from unowned WebGraphicsContext3D
https://bugs.webkit.org/show_bug.cgi?id=111638
Summary
[chromium] Don't get callbacks or create GrContext from unowned WebGraphicsCo...
Dana Jansens
Reported
2013-03-06 16:03:58 PST
[chromium] Don't get callbacks or create GrContext from unowned WebGraphicsContext3D
Attachments
Patch
(4.72 KB, patch)
2013-03-06 16:06 PST
,
Dana Jansens
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dana Jansens
Comment 1
2013-03-06 16:06:00 PST
Created
attachment 191858
[details]
Patch
Dana Jansens
Comment 2
2013-03-06 16:06:27 PST
With this patch, the renderer no longer crashes if I kill the GPU process while watching a flash video.
Dana Jansens
Comment 3
2013-03-06 16:15:25 PST
(I have no idea how to test this with a test, if you have an idea I can persue that)
Dana Jansens
Comment 4
2013-03-06 16:15:52 PST
Oh, and after
https://codereview.chromium.org/12506003/
flash won't hit this path anymore.
WebKit Review Bot
Comment 5
2013-03-06 16:31:38 PST
Comment on
attachment 191858
[details]
Patch Clearing flags on attachment: 191858 Committed
r145004
: <
http://trac.webkit.org/changeset/145004
>
WebKit Review Bot
Comment 6
2013-03-06 16:31:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug